test/bad/generics/type10.px

func f<A>(A->A p) def
    return

func g(Int x) Bool def
    return true

f(g)
